<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".loginActivity">

    <TextView
        android:id="@+id/txvPRegisterL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContinueL" />

    <TextView
        android:id="@+id/txvForgotPassL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/fPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txpPassL" />

    <EditText
        android:id="@+id/txpPassL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/TertiaryColor"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txpMailTelL" />

    <ImageView
        android:id="@+id/imvLogoL"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/txpMailTelL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/TertiaryColor"
        android:ems="10"
        android:hint="@string/iptMailTel"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvLoginL" />

    <Button
        android:id="@+id/btnContinueL"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:text="@string/cntBtn"
        android:textColor="@color/white"
        app:backgroundTint="@color/secundaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvForgotPassL" />

    <ImageButton
        android:id="@+id/imbFacebookL"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/primaryColor"
        android:contentDescription="@string/facebook"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContinueL"
        app:srcCompat="@drawable/facebook" />

    <ImageButton
        android:id="@+id/imbGoogleL"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/primaryColor"
        android:contentDescription="@string/google"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/imbFacebookL"
        app:layout_constraintTop_toBottomOf="@+id/btnContinueL"
        app:srcCompat="@drawable/google" />

    <ImageButton
        android:id="@+id/imbTwitterL"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/primaryColor"
        android:contentDescription="@string/twitter"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/imbFacebookL"
        app:layout_constraintTop_toBottomOf="@+id/btnContinueL"
        app:srcCompat="@drawable/twitter" />

    <ImageView
        android:id="@+id/imvPBSettlet2"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:contentDescription="@string/pbSettlet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pbsettlet" />

    <TextView
        android:id="@+id/txvLoginL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/pLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvLogoL" />
</androidx.constraintlayout.widget.ConstraintLayout>